--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -5,9 +5,9 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
 	<title>Главная</title>
-	<link rel="stylesheet" href="css/smoothproducts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css" />	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
+	<link rel="stylesheet" href="css/jqcloud.css">
 	<!--Google font-->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic" rel="stylesheet">
 </head>
@@ -2777,7 +2777,7 @@
 
 <!-- BODY EOF   -->
 	
-	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>		
+	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>	
 	<script type="text/javascript" src="js/jquery-migrate-1.4.1.min.js" ></script>
 	<!--
 	<script type="text/javascript" src="js/components/jquery.fancybox.js" ></script>
@@ -2785,12 +2785,13 @@
 	
 	<script type="text/javascript" src="js/components/jquery.mCustomScrollbar.js" ></script>
 	-->
-	<script type="text/javascript" src="js/custom.js" ></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
 	<script src="https://use.fontawesome.com/6b27e5d2aa.js"></script>
 	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
 	<script type="text/javascript" src="js/components/jquery.countdown.min.js" ></script>
 	<script src="js/components/smoothproducts.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script src="js/jquery.ui.touch-punch.min.js"></script>
+	<script type="text/javascript" src="js/custom.js" ></script>
 </body>
 </html>
