--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -1986,7 +1986,8 @@
 						<h2 class="main__title">Отзывы</h2>
 						<div class="goodsinfo__desc description feedback">
 							<div class="description__box feedback__box_grey">
-								<div class="description__item description__item_m">
+								<div class="desc
+								ription__item description__item_m">
 									<div class="description__left">
 										<p class="description__name">Шевченко Ирина</p>
 										<div class="reviews__rating reviews__rating_medium">
@@ -2123,7 +2124,7 @@
 							</div>
 						</div>
 						<button class="showmore feedback__showmore">ПОКАЗАТЬ ВСЕ</button>
-						<div class="goodreview">
+						<!-- <div class="goodreview">
 							<h3 class="goodreview__title">Оставьте Ваш отзыв о товаре</h3>
 							<div class="goodreview__rating">
 								<span>Ваша оценка:</span>
@@ -2171,7 +2172,7 @@
 								</div>
 								<button class="showmore">ОТПРАВИТЬ ОТЗЫВ</button>
 							</form>
-						</div>
+						</div> -->
 					</div>
 				</div>	
 			</div>
