--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -1984,7 +1984,7 @@
 				<div class="main__container feedback__container">
 					<div class="goodinfo clearfix">
 						<h2 class="main__title">Отзывы</h2>
-						<div class="goodsinfo__desc description feedback">
+						<!-- <div class="goodsinfo__desc description feedback">
 							<div class="description__box feedback__box_grey">
 								<div class="desc
 								ription__item description__item_m">
@@ -2122,7 +2122,7 @@
 							<div class="goodpager__next">
 								<i class="fa fa-angle-right" aria-hidden="true"></i>
 							</div>
-						</div>
+						</div> -->
 						<button class="showmore feedback__showmore">ПОКАЗАТЬ ВСЕ</button>
 						<!-- <div class="goodreview">
 							<h3 class="goodreview__title">Оставьте Ваш отзыв о товаре</h3>
