--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -1984,7 +1984,7 @@
 				<div class="main__container feedback__container">
 					<div class="goodinfo clearfix">
 						<h2 class="main__title">Отзывы</h2>
-						<!-- <div class="goodsinfo__desc description feedback">
+						<div class="goodsinfo__desc description feedback">
 							<div class="description__box feedback__box_grey">
 								<div class="desc
 								ription__item description__item_m">
@@ -2102,7 +2102,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="goodpager feedback__pager">
+						<!-- <div class="goodpager feedback__pager">
 							<div class="goodpager__prev">
 								<i class="fa fa-angle-left" aria-hidden="true"></i>
 							</div>
@@ -2124,7 +2124,7 @@
 							</div>
 						</div> -->
 						<button class="showmore feedback__showmore">ПОКАЗАТЬ ВСЕ</button>
-						<!-- <div class="goodreview">
+						<div class="goodreview">
 							<h3 class="goodreview__title">Оставьте Ваш отзыв о товаре</h3>
 							<div class="goodreview__rating">
 								<span>Ваша оценка:</span>
@@ -2172,7 +2172,7 @@
 								</div>
 								<button class="showmore">ОТПРАВИТЬ ОТЗЫВ</button>
 							</form>
-						</div> -->
+						</div>
 					</div>
 				</div>	
 			</div>
