--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -1984,10 +1984,9 @@
 				<div class="main__container feedback__container">
 					<div class="goodinfo clearfix">
 						<h2 class="main__title">Отзывы</h2>
-						<!-- <div class="goodsinfo__desc description feedback">
+						<div class="goodsinfo__desc description feedback">
 							<div class="description__box feedback__box_grey">
-								<div class="desc
-								ription__item description__item_m">
+								<div class="description__item description__item_m">
 									<div class="description__left">
 										<p class="description__name">Шевченко Ирина</p>
 										<div class="reviews__rating reviews__rating_medium">
@@ -2101,7 +2100,7 @@
 									</p>
 								</div>
 							</div>
-						</div> -->
+						</div>
 						<div class="goodpager feedback__pager">
 							<div class="goodpager__prev">
 								<i class="fa fa-angle-left" aria-hidden="true"></i>
