--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -2023,7 +2023,7 @@
 								</div>
 							</div>							
 						</div>
-						<div class="goodsinfo__desc description feedback">
+						<!-- <div class="goodsinfo__desc description feedback">
 							<div class="description__box feedback__box_grey">
 								<div class="description__item description__item_m">
 									<div class="description__left">
@@ -2100,7 +2100,7 @@
 									</p>
 								</div>
 							</div>
-						</div>
+						</div> -->
 						<div class="goodpager feedback__pager">
 							<div class="goodpager__prev">
 								<i class="fa fa-angle-left" aria-hidden="true"></i>
