--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -1989,14 +1989,14 @@
 								<div class="description__item description__item_m">
 									<div class="description__left">
 										<p class="description__name">Шевченко Ирина</p>
-										<div class="reviews__rating reviews__rating_medium">
+										<!-- <div class="reviews__rating reviews__rating_medium">
 										<span>5.0</span>
 										<i class="fa fa-star" aria-hidden="true"></i>
 										<i class="fa fa-star" aria-hidden="true"></i>
 										<i class="fa fa-star" aria-hidden="true"></i>
 										<i class="fa fa-star" aria-hidden="true"></i>
 										<i class="fa fa-star" aria-hidden="true"></i>
-									</div>
+									</div> -->
 									</div>
 									<div class="description__right">
 										<p class="description__data">9 дек 2016 г., 11:45</p>
