--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -1998,9 +1998,9 @@
 										<i class="fa fa-star" aria-hidden="true"></i>
 									</div>
 									</div>
-									<!-- <div class="description__right">
+									<div class="description__right">
 										<p class="description__data">9 дек 2016 г., 11:45</p>
-									</div> -->
+									</div>
 								</div>
 								<div class="description__item">
 									<p class="description__p">
@@ -2010,7 +2010,7 @@
 									</p>
 								</div>
 							</div>
-							<div class="description__box">
+							<!-- <div class="description__box">
 								<div class="description__item description__item_m">
 									<div class="description__left">
 										<p class="description__name">Комментарий компании:</p>
@@ -2021,7 +2021,7 @@
 										Рады стараться для Вас ;)
 									</p>
 								</div>
-							</div>							
+							</div> -->							
 						</div>
 						<!-- <div class="goodsinfo__desc description feedback">
 							<div class="description__box feedback__box_grey">
