--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -1985,7 +1985,7 @@
 					<div class="goodinfo clearfix">
 						<h2 class="main__title">Отзывы</h2>
 						<div class="goodsinfo__desc description feedback">
-							<div class="description__box feedback__box_grey">
+							<!-- <div class="description__box feedback__box_grey">
 								<div class="description__item description__item_m">
 									<div class="description__left">
 										<p class="description__name">Шевченко Ирина</p>
@@ -2009,8 +2009,8 @@
 										<b>Комментарий:</b> Отличный подарок) быстрая доставка) приятно сотрудничать
 									</p>
 								</div>
-							</div>
-							<!-- <div class="description__box">
+							</div> -->
+							<div class="description__box">
 								<div class="description__item description__item_m">
 									<div class="description__left">
 										<p class="description__name">Комментарий компании:</p>
@@ -2021,7 +2021,7 @@
 										Рады стараться для Вас ;)
 									</p>
 								</div>
-							</div> -->							
+							</div>							
 						</div>
 						<!-- <div class="goodsinfo__desc description feedback">
 							<div class="description__box feedback__box_grey">
