--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -1985,7 +1985,7 @@
 					<div class="goodinfo clearfix">
 						<h2 class="main__title">Отзывы</h2>
 						<div class="goodsinfo__desc description feedback">
-							<!-- <div class="description__box feedback__box_grey">
+							<div class="description__box feedback__box_grey">
 								<div class="description__item description__item_m">
 									<div class="description__left">
 										<p class="description__name">Шевченко Ирина</p>
@@ -2002,14 +2002,14 @@
 										<p class="description__data">9 дек 2016 г., 11:45</p>
 									</div>
 								</div>
-								<div class="description__item">
+								<!-- <div class="description__item">
 									<p class="description__p">
 										<b>Достоинства:</b> Высокий, удобный, приятная цена<br>
 										<b>Недостатки:</b> Неудобные щипцы в комплекте<br>
 										<b>Комментарий:</b> Отличный подарок) быстрая доставка) приятно сотрудничать
 									</p>
-								</div>
-							</div> -->
+								</div> -->
+							</div>
 							<div class="description__box">
 								<div class="description__item description__item_m">
 									<div class="description__left">
