--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -2002,13 +2002,13 @@
 										<p class="description__data">9 дек 2016 г., 11:45</p>
 									</div>
 								</div>
-								<!-- <div class="description__item">
+								<div class="description__item">
 									<p class="description__p">
-										<b>Достоинства:</b> Высокий, удобный, приятная цена<br>
-										<b>Недостатки:</b> Неудобные щипцы в комплекте<br>
-										<b>Комментарий:</b> Отличный подарок) быстрая доставка) приятно сотрудничать
+										<a>Достоинства:</a> Высокий, удобный, приятная цена<br>
+										<a>Недостатки:</a> Неудобные щипцы в комплекте<br>
+										<a>Комментарий:</a> Отличный подарок) быстрая доставка) приятно сотрудничать
 									</p>
-								</div> -->
+								</div>
 							</div>
 							<div class="description__box">
 								<div class="description__item description__item_m">
