--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -2003,11 +2003,11 @@
 									</div>
 								</div>
 								<div class="description__item">
-									<p class="description__p">
-										<a>Достоинства:</a> Высокий, удобный, приятная цена<br>
-										<a>Недостатки:</a> Неудобные щипцы в комплекте<br>
-										<a>Комментарий:</a> Отличный подарок) быстрая доставка) приятно сотрудничать
-									</p>
+									<!-- <p class="description__p">
+										<b>Достоинства:</b> Высокий, удобный, приятная цена<br>
+										<b>Недостатки:</b> Неудобные щипцы в комплекте<br>
+										<b>Комментарий:</b> Отличный подарок) быстрая доставка) приятно сотрудничать
+									</p> -->
 								</div>
 							</div>
 							<div class="description__box">
