--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -2004,10 +2004,10 @@
 								</div>
 								<div class="description__item">
 									<p class="description__par">
-											<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
-											<b>Недостатки:</b> получилась накладка с чашкой.<br>
-											<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
-										</p>
+										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
+										<b>Недостатки:</b> получилась накладка с чашкой.<br>
+										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
+									</p>
 								</div>
 							</div>
 							<div class="description__box">
@@ -2023,7 +2023,7 @@
 								</div>
 							</div>							
 						</div>
-						<!-- <div class="goodsinfo__desc description feedback">
+						<div class="goodsinfo__desc description feedback">
 							<div class="description__box feedback__box_grey">
 								<div class="description__item description__item_m">
 									<div class="description__left">
@@ -2042,7 +2042,7 @@
 									</div>
 								</div>
 								<div class="description__item">
-									<p class="description__p">
+									<p class="description__par">
 										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
 										<b>Недостатки:</b> получилась накладка с чашкой.<br>
 										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
@@ -2081,10 +2081,10 @@
 									</div>
 								</div>
 								<div class="description__item">
-									<p class="description__p">
-										<b>Достоинства:</b> 2 шланга, подходит даже для большой компании, нормальная чашка, хватает надолго.<br>
-										<b>Недостатки:</b> Пока не обнаружили, единственное, тяга не очень сильная, возможно, из-за 2-х трубок.<br>
-										<b>Комментарий:</b> Это просто удивительный кальян. Я не думала что бывают такие модели на 2 шланга. Понравился<br> ассортимент, заказала себе желтый кальянчик. Консультанты вежливо обращались, жаль, что сразу желтого не было. <br>Предложили подождать 2 дня, или выбрать другой цвет. Но я хотела желтый, ждала. Так мне в подарок прислали еще<br> и пачку табака за ожидание. Спасибо!)))
+									<p class="description__par">
+										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
+										<b>Недостатки:</b> получилась накладка с чашкой.<br>
+										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
 									</p>
 								</div>
 							</div>
@@ -2100,7 +2100,7 @@
 									</p>
 								</div>
 							</div>
-						</div> -->
+						</div>
 						<div class="goodpager feedback__pager">
 							<div class="goodpager__prev">
 								<i class="fa fa-angle-left" aria-hidden="true"></i>
