--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -2003,11 +2003,11 @@
 									</div>
 								</div>
 								<div class="description__item">
-									<p>
+									<span class="description__p">
 										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
 										<b>Недостатки:</b> получилась накладка с чашкой.<br>
 										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
-									</p>
+									</span>
 								</div>
 							</div>
 							<div class="description__box">
@@ -2042,11 +2042,11 @@
 									</div>
 								</div>
 								<div class="description__item">
-									<p>
+									<span class="description__p">
 										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
 										<b>Недостатки:</b> получилась накладка с чашкой.<br>
 										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
-									</p>
+									</span>
 								</div>
 							</div>
 							<div class="description__box">
@@ -2081,11 +2081,11 @@
 									</div>
 								</div>
 								<div class="description__item">
-									<p>
+									<span class="description__p">
 										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
 										<b>Недостатки:</b> получилась накладка с чашкой.<br>
 										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
-									</p>
+									</span>
 								</div>
 							</div>
 							<div class="description__box">
