--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -2003,10 +2003,10 @@
 									</div>
 								</div>
 								<div class="description__item">
-									<p class="description__p">
-										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании
-										<b>Недостатки:</b> получилась накладка с чашкой.
-										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
+									<p class="feedback__p">
+										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
+										<b>Недостатки:</b> получилась накладка с чашкой.<br>
+										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
 									</p>
 								</div>
 							</div>
@@ -2042,10 +2042,10 @@
 									</div>
 								</div>
 								<div class="description__item">
-									<p class="description__p">
-										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании
-										<b>Недостатки:</b> получилась накладка с чашкой.
-										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
+									<p class="feedback__p">
+										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
+										<b>Недостатки:</b> получилась накладка с чашкой.<br>
+										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
 									</p>
 								</div>
 							</div>
@@ -2081,10 +2081,10 @@
 									</div>
 								</div>
 								<div class="description__item">
-									<p class="description__p">
-										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании
-										<b>Недостатки:</b> получилась накладка с чашкой.
-										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
+									<p class="feedback__p">
+										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
+										<b>Недостатки:</b> получилась накладка с чашкой.<br>
+										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
 									</p>
 								</div>
 							</div>
