--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -2004,9 +2004,7 @@
 								</div>
 								<div class="description__item">
 									<p class="description__p">
-										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
-										<b>Недостатки:</b> получилась накладка с чашкой.<br>
-										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
+										Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;)
 									</p>
 								</div>
 							</div>
@@ -2043,9 +2041,7 @@
 								</div>
 								<div class="description__item">
 									<p class="description__p">
-										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
-										<b>Недостатки:</b> получилась накладка с чашкой.<br>
-										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
+										Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;)
 									</p>
 								</div>
 							</div>
@@ -2082,9 +2078,7 @@
 								</div>
 								<div class="description__item">
 									<p class="description__p">
-										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
-										<b>Недостатки:</b> получилась накладка с чашкой.<br>
-										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
+										Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;) Рады стараться для Вас ;)
 									</p>
 								</div>
 							</div>
