--- a/smoky/account.html
+++ b/smoky/account.html
@@ -5,11 +5,11 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
 	<title>Главная</title>
-	<link rel="stylesheet" href="css/smoothproducts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css" />	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
+	<link rel="stylesheet" href="css/jqcloud.css">
 	<!--Google font-->
-	<!-- <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body class="loaded">
 
@@ -1981,196 +1981,157 @@
 						</li>
 					</ul>
 				</nav>
-				<div class="main__container feedback__container">
-					<div class="goodinfo clearfix">
-						<h2 class="main__title">Отзывы</h2>
-						<div class="goodsinfo__desc description feedback">
-							<div class="description__box feedback__box_grey">
-								<div class="description__item description__item_m">
-									<div class="description__left">
-										<p class="description__name">Шевченко Ирина</p>
-										<div class="reviews__rating reviews__rating_medium">
-										<span>5.0</span>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-									</div>
-									</div>
-									<div class="description__right">
-										<p class="description__data">9 дек 2016 г., 11:45</p>
-									</div>
+				<div class="main__container account__container">
+					<div class="breadcrumbs">
+						<a href="">Главная</a>
+						<span>/</span>
+						<a href="">Личная информация</a>
+					</div>
+					<div class="account">
+						<h2 class="main__title">Аккаунт</h2>
+						<div class="accountcont">
+							<div class="accountcont__left">
+								<div class="accountcont__tab accountcont__tab_1">
+									<p>Личная информация</p>
 								</div>
-								<div class="description__item">
-									<p class="description__p">
-										<b>Достоинства:</b> Высокий, удобный, приятная цена<br>
-										<b>Недостатки:</b> Неудобные щипцы в комплекте<br>
-										<b>Комментарий:</b> Отличный подарок) быстрая доставка) приятно сотрудничать
-									</p>
+								<div class="accountcont__tab accountcont__tab_2">
+									<p>Мои комментарии</p>
+								</div>
+								<div class="accountcont__tab accountcont__tab_3 accountcont__tab_active">
+									<p>Мои заказы</p>
 								</div>
 							</div>
-							<div class="description__box">
-								<div class="description__item description__item_m">
-									<div class="description__left">
-										<p class="description__name">Комментарий компании:</p>
+							<div class="accountcont__center myorders">
+								<div class="accountcont__row accountcont__row_active">
+									<p>Заказ №57282-86</p>
+									<p>11 октября 2017 10:20</p>
+									<p>5 товаров на 6 600 руб.</p>
+									<div class="accountcont__lastrow">
+										<p class="accountcont__row_success">Выполнен</p>
 									</div>
 								</div>
-								<div class="description__item">
-									<p class="description__p">
-										Рады стараться для Вас ;)
-									</p>
-								</div>
-							</div>							
-						</div>
-						<div class="goodsinfo__desc description feedback">
-							<div class="description__box feedback__box_grey">
-								<div class="description__item description__item_m">
-									<div class="description__left">
-										<p class="description__name">Остапко Андрей</p>
-										<div class="reviews__rating reviews__rating_medium">
-										<span>5.0</span>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-									</div>
-									</div>
-									<div class="description__right">
-										<p class="description__data">9 дек 2016 г., 11:45</p>
+								<div class="accountcont__row">
+									<p>Заказ №57282-86</p>
+									<p>11 октября 2017 10:20</p>
+									<p>5 товаров на 6 600 руб.</p>
+									<div class="accountcont__lastrow">
+										<p class="accountcont__row_delivered">Доставлен</p>
 									</div>
 								</div>
-								<div class="description__item">
-									<p class="description__p">
-										<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
-										<b>Недостатки:</b> получилась накладка с чашкой.<br>
-										<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
-									</p>
+								<div class="accountcont__row">
+									<p>Заказ №57282-86</p>
+									<p>11 октября 2017 10:20</p>
+									<p>5 товаров на 6 600 руб.</p>
+									<div class="accountcont__lastrow">
+										<p class="accountcont__row_send">Отправлен</p>
+									</div>
+								</div>
+								<div class="accountcont__row">
+									<p>Заказ №57282-86</p>
+									<p>11 октября 2017 10:20</p>
+									<p>5 товаров на 6 600 руб.</p>
+									<div class="accountcont__lastrow">
+										<p class="accountcont__row_progress">В обработке</p>
+									</div>
+								</div>
+								<div class="accountcont__row">
+									<p>Заказ №57282-86</p>
+									<p>11 октября 2017 10:20</p>
+									<p>5 товаров на 6 600 руб.</p>
+									<div class="accountcont__lastrow">
+										<p class="accountcont__row_new">Новый</p>
+									</div>
+								</div>
+								<div class="accountcont__row">
+									<p>Заказ №57282-86</p>
+									<p>11 октября 2017 10:20</p>
+									<p>5 товаров на 6 600 руб.</p>
+									<div class="accountcont__lastrow">
+										<p class="accountcont__row_deleted">Отменён</p>
+									</div>
 								</div>
 							</div>
-							<div class="description__box">
-								<div class="description__item description__item_m">
-									<div class="description__left">
-										<p class="description__name">Комментарий компании:</p>
-									</div>
-								</div>
-								<div class="description__item">
-									<p class="description__p">
-										Рады стараться для Вас ;)
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="goodsinfo__desc description feedback">
-							<div class="description__box feedback__box_grey">
-								<div class="description__item description__item_m">
-									<div class="description__left">
-										<p class="description__name">Качалов Викор</p>
-										<div class="reviews__rating reviews__rating_medium">
-										<span>5.0</span>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-										<i class="fa fa-star" aria-hidden="true"></i>
-									</div>
-									</div>
-									<div class="description__right">
-										<p class="description__data">9 дек 2016 г., 11:45</p>
-									</div>
-								</div>
-								<div class="description__item">
-									<p class="description__p">
-										<b>Достоинства:</b> 2 шланга, подходит даже для большой компании, нормальная чашка, хватает надолго.<br>
-										<b>Недостатки:</b> Пока не обнаружили, единственное, тяга не очень сильная, возможно, из-за 2-х трубок.<br>
-										<b>Комментарий:</b> Это просто удивительный кальян. Я не думала что бывают такие модели на 2 шланга. Понравился<br> ассортимент, заказала себе желтый кальянчик. Консультанты вежливо обращались, жаль, что сразу желтого не было. <br>Предложили подождать 2 дня, или выбрать другой цвет. Но я хотела желтый, ждала. Так мне в подарок прислали еще<br> и пачку табака за ожидание. Спасибо!)))
-									</p>
-								</div>
-							</div>
-							<div class="description__box">
-								<div class="description__item description__item_m">
-									<div class="description__left">
-										<p class="description__name">Комментарий компании:</p>
-									</div>
-								</div>
-								<div class="description__item">
-									<p class="description__p">
-										Рады стараться для Вас ;)
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="goodpager feedback__pager">
-							<div class="goodpager__prev">
-								<i class="fa fa-angle-left" aria-hidden="true"></i>
-							</div>
-							<div class="goodpager__main">
-								<a href="">1</a>
-								<a href="">...</a>
-								<a href="">3</a>
-								<a href="">4</a>
-								<a href="">5</a>
-								<a href="">6</a>
-								<a href="">7</a>
-								<a href="">8</a>
-								<a href="">9</a>
-								<a href="">...</a>
-								<a href="">17</a>
-							</div>
-							<div class="goodpager__next">
-								<i class="fa fa-angle-right" aria-hidden="true"></i>
-							</div>
-						</div>
-						<button class="showmore feedback__showmore">ПОКАЗАТЬ ВСЕ</button>
-						<div class="goodreview">
-							<h3 class="goodreview__title">Оставьте Ваш отзыв о товаре</h3>
-							<div class="goodreview__rating">
-								<span>Ваша оценка:</span>
-								<div class="goodreview__stars ratingg">
-									<label>
-										<input type="radio" name="rating" value="5" title="5 stars"> 5
-									</label>
-									<label>
-									    <input type="radio" name="rating" value="4" title="4 stars"> 4
-									</label>
-									<label>
-									    <input type="radio" name="rating" value="3" title="3 stars"> 3
-									</label>
-									<label>
-									    <input type="radio" name="rating" value="2" title="2 stars"> 2
-									</label>
-									<label>
-									    <input type="radio" name="rating" value="1" title="1 star"> 1
-									</label>
-								</div>
-							</div>
-							<form action="">
-								<div class="goodreview__textarea feedback__textarea">
-									<label for="">Комментарий:</label>
-									<textarea name="" id="" placeholder="Оставьте Ваш комментарий"></textarea>
-								</div>
-								<div class="goodreview__inputcont">
-									<div class="goodreview__inputbox">
-										<label for="">Ваше имя*:</label>
-										<input class="goodreview__input goodreview__input_1" type="text" placeholder="Введите имя">
-									</div>
-									<div class="goodreview__inputbox">
-										<label for="">Ваш e-mail (не публикуется)*:</label>
-										<input class="goodreview__input goodreview__input_2" type="email" placeholder="Введите e-mail">
-									</div>
-									<div class="goodreview__inputbox">
-										<label for="">Введите код с картинки*:</label>
-										<div class="goodreview__kapchacont">
-											<div class="goodreview__kapcha">
-												<img src="img/kapcha.jpg" alt="">
-											</div>
-											<input class="goodreview__input goodreview__input_3" type="text" placeholder="Введите код сюда">
+							<div class="accountcont__center mycomments">
+								<div class="description__box">
+									<img src="img/close1.png" class="mycomments__close" alt="">
+									<div class="description__item description__item_m">
+										<div class="description__left">
+											<p class="description__name">Кальян Faraon Mina</p>
+											<div class="reviews__rating reviews__rating_medium">
+											<span>5.0</span>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+										</div>
+										</div>
+										<div class="description__right">
+											<p class="description__data">9 дек 2016 г., 11:45</p>
 										</div>
 									</div>
+									<div class="description__item">
+										<p class="description__p">
+											Достоинства: хороший кальян, много дыма, курить можно даже в большой компании<br>
+											Недостатки: получилась накладка с чашкой.<br>
+											Комментарий: Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
+										</p>
+									</div>
 								</div>
-								<button class="showmore">ОТПРАВИТЬ ОТЗЫВ</button>
-							</form>
+								<div class="description__box">
+									<img src="img/close1.png" class="mycomments__close" alt="">
+									<div class="description__item description__item_m">
+										<div class="description__left">
+											<p class="description__name">Кальян Faraon Mina</p>
+											<div class="reviews__rating reviews__rating_medium">
+											<span>5.0</span>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<i class="fa fa-star" aria-hidden="true"></i>
+										</div>
+										</div>
+										<div class="description__right">
+											<p class="description__data">9 дек 2016 г., 11:45</p>
+										</div>
+									</div>
+									<div class="description__item">
+										<p class="description__p">
+											Достоинства: хороший кальян, много дыма, курить можно даже в большой компании<br>
+											Недостатки: получилась накладка с чашкой.<br>
+											Комментарий: Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="accountcont__center myinfo">
+								<div class="myinfo__input">
+									<label for="">Имя:</label>
+									<input type="text" placeholder="Дмитрий">
+								</div>
+								<div class="myinfo__input">
+									<label for="">Фамилия:</label>
+									<input type="text" placeholder="Дмитриев">
+								</div>
+								<div class="myinfo__input">
+									<label for="">E-mail:</label>
+									<input type="text" placeholder="dmitriy_d@gmail.com">
+								</div>
+								<div class="myinfo__input">
+									<label for="">Телефон:</label>
+									<input type="text" placeholder="+7 (495) 771-11-83">
+								</div>
+								<div class="myinfo__input">
+									<label for="">Адрес доставки:</label>
+									<input type="text" placeholder="г. Москва, ул.Ленина 154/70">
+								</div>
+								<div class="myinfo__input">
+									<label for=""></label>
+									<a href="" class="myinfo__addaddress">добавить адрес</a>
+								</div>
+								<a href="" class="myinfo__changepass">ИЗМЕНИТЬ ПАРОЛЬ</a>
+							</div>
 						</div>
 					</div>
 				</div>	
@@ -2777,7 +2738,6 @@
 
 <!-- BODY EOF   -->
 	
-	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>		
 	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>	
 	<script type="text/javascript" src="js/jquery-migrate-1.4.1.min.js" ></script>
 	<!--
