--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css" />	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
 	<!--Google font-->
-	<!-- <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body class="loaded">
 
@@ -2191,6 +2191,49 @@
 					<button class="modalform__button modalform__button_orange">нет, мне меньше 18</button>
 				</div>
 				<p class="modalform__welcome">Добро пожаловать и приятных покупок!</p>
+			</div>
+			<div class="overlay"></div>
+			<!--Modal window end-->
+			<!--Modal window-->
+			<div class="modalform modalreg">
+				<span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span>
+				<h2 class="modalform__title modalcall__title">Регистрация</h2>
+				<div class="loginpop__box loginpop__box_1">
+					<form action="">
+						<div class="loginpop__input">
+							<p>Электронная почта (E-mail)*</p>
+							<input type="email" placeholder="example@google.com">
+						</div>
+						<div class="loginpop__input">
+							<p>Пароль*</p>
+							<input type="password" placeholder="Введите пароль">
+						</div>
+						<div class="loginpop__input">
+							<p>Пароль*</p>
+							<input type="password" placeholder="Введите пароль">
+						</div>
+						<a href="" class="loginpop__pass">Забыли пароль?</a>
+						<button class="showmore">Зарегистрироваться</button>
+					</form>
+				</div>
+				<div class="loginpop__box">
+					<div class="loginpop__soccont">
+						<p>Войти через социальные сети:</p>
+						<div class="socials">
+							<a href=""><img src="img/f1.png" alt=""></a>
+							<a href=""><img src="img/f2.png" alt=""></a>
+							<a href=""><img src="img/f3.png" alt=""></a>
+							<a href=""><img src="img/f4.png" alt=""></a>
+							<a href=""><img src="img/f5.png" alt=""></a>
+						</div>
+					</div>
+				</div>
+				<!-- <div class="loginpop__box">
+					<div class="loginpop__reg">
+						<p>Нет учётной записи?</p>
+						<a href="" class="modal-run6">Зарегистрироваться</a>
+					</div>
+				</div> -->
 			</div>
 			<div class="overlay"></div>
 			<!--Modal window end-->
