--- a/chemodan__shop/goods.html
+++ b/chemodan__shop/goods.html
@@ -560,8 +560,8 @@
 											</div>
 										</div>
 										<div class="allfilters__item allfilters__item_check">
-											<input type="checkbox" id="size1" class="checkbox">
-											<label for="size1" class="checkboxlabel">Увеличение объёма</label>
+											<input type="checkbox" id="size2" class="checkbox">
+											<label for="size2" class="checkboxlabel">Увеличение объёма</label>
 										</div>
 									</div>
 
@@ -612,8 +612,8 @@
 
 									<div class="sidefilters__item">
 										<div class="allfilters__item allfilters__item_check">
-											<input type="checkbox" id="akcii1" class="checkbox">
-											<label for="akcii1" class="checkboxlabel">Акционный товар</label>
+											<input type="checkbox" id="akcii2" class="checkbox">
+											<label for="akcii2" class="checkboxlabel">Акционный товар</label>
 										</div>
 									</div>
 
@@ -814,8 +814,8 @@
 											</div>
 										</div>
 										<div class="allfilters__item allfilters__item_check">
-											<input type="checkbox" id="size1" class="checkbox">
-											<label for="size1" class="checkboxlabel">Увеличение объёма</label>
+											<input type="checkbox" id="size3" class="checkbox">
+											<label for="size3" class="checkboxlabel">Увеличение объёма</label>
 										</div>
 									</div>
 
@@ -866,8 +866,8 @@
 
 									<div class="sidefilters__item">
 										<div class="allfilters__item allfilters__item_check">
-											<input type="checkbox" id="akcii1" class="checkbox">
-											<label for="akcii1" class="checkboxlabel">Акционный товар</label>
+											<input type="checkbox" id="akcii3" class="checkbox">
+											<label for="akcii3" class="checkboxlabel">Акционный товар</label>
 										</div>
 									</div>
 
@@ -1068,8 +1068,8 @@
 											</div>
 										</div>
 										<div class="allfilters__item allfilters__item_check">
-											<input type="checkbox" id="size1" class="checkbox">
-											<label for="size1" class="checkboxlabel">Увеличение объёма</label>
+											<input type="checkbox" id="size4" class="checkbox">
+											<label for="size4" class="checkboxlabel">Увеличение объёма</label>
 										</div>
 									</div>
 
@@ -1120,8 +1120,8 @@
 
 									<div class="sidefilters__item">
 										<div class="allfilters__item allfilters__item_check">
-											<input type="checkbox" id="akcii1" class="checkbox">
-											<label for="akcii1" class="checkboxlabel">Акционный товар</label>
+											<input type="checkbox" id="akcii4" class="checkbox">
+											<label for="akcii4" class="checkboxlabel">Акционный товар</label>
 										</div>
 									</div>
 
@@ -1330,8 +1330,8 @@
 
 									<div class="sidefilters__item">
 										<div class="allfilters__item allfilters__item_check">
-											<input type="checkbox" id="akcii1" class="checkbox">
-											<label for="akcii1" class="checkboxlabel">Акционный товар</label>
+											<input type="checkbox" id="akcii5" class="checkbox">
+											<label for="akcii5" class="checkboxlabel">Акционный товар</label>
 										</div>
 									</div>
 
@@ -1540,8 +1540,8 @@
 
 									<div class="sidefilters__item">
 										<div class="allfilters__item allfilters__item_check">
-											<input type="checkbox" id="akcii1" class="checkbox">
-											<label for="akcii1" class="checkboxlabel">Акционный товар</label>
+											<input type="checkbox" id="akcii6" class="checkbox">
+											<label for="akcii6" class="checkboxlabel">Акционный товар</label>
 										</div>
 									</div>
 
@@ -1589,7 +1589,7 @@
 			<div class="maincont">
 				<nav class="mainnav">
 					<ul>
-						<li><a href=""><img src="img/icon_home.svg" alt=""></a></li>
+						<li><a href=""><i class="mainnav__home"></i></a></li>
 						<li><a href="">О нас</a></li>
 						<li><a href="">Доставка и оплата</a></li>
 						<li><a href="">Отзывы</a></li>
