--- a/chemodan__shop/index.html
+++ b/chemodan__shop/index.html
@@ -647,7 +647,7 @@
 			<div class="maincont">
 				<nav class="mainnav">
 					<ul>
-						<li><a href=""><img src="img/icon_home.svg" alt=""></a></li>
+						<li><a href=""><i class="mainnav__home"></i></a></li>
 						<li><a href="">О нас</a></li>
 						<li><a href="">Доставка и оплата</a></li>
 						<li><a href="">Отзывы</a></li>
