--- a/chemodan__shop/index.html
+++ b/chemodan__shop/index.html
@@ -748,6 +748,11 @@
 				<!-- Banner -->
 				<div class="banner">
 					<img src="img/banner.jpg" alt="">
+					<img src="img/banner.jpg" alt="">
+					<img src="img/banner.jpg" alt="">
+					<img src="img/banner.jpg" alt="">
+					<img src="img/banner.jpg" alt="">
+					<img src="img/banner.jpg" alt="">
 				</div>
 				<!-- Banner categories -->
 				<div class="bannercat">
