--- a/chemodan__shop/index.html
+++ b/chemodan__shop/index.html
@@ -756,27 +756,27 @@
 				</div>
 				<!-- Banner categories -->
 				<div class="bannercat">
-					<div class="bannercat__item">
+					<div class="bannercat__item bannercat__item_1">
 						<img src="img/icon_suitcase.svg" alt="" class="bannercat__img bannercat__img_1">
 						<span>Чемоданы</span>
 					</div>
-					<div class="bannercat__item">
+					<div class="bannercat__item bannercat__item_2">
 						<img src="img/icon_sport-bag.svg" alt="" class="bannercat__img bannercat__img_2">
 						<span>Сумки</span>
 					</div>
-					<div class="bannercat__item">
+					<div class="bannercat__item bannercat__item_3">
 						<img src="img/icon_backpack.svg" alt="" class="bannercat__img bannercat__img_3">
 						<span>Рюкзаки</span>
 					</div>
-					<div class="bannercat__item">
+					<div class="bannercat__item bannercat__item_4">
 						<img src="img/icon_bear.svg" alt="" class="bannercat__img bannercat__img_4">
 						<span>Для детей</span>
 					</div>
-					<div class="bannercat__item">
+					<div class="bannercat__item bannercat__item_5">
 						<img src="img/icon_leather.svg" alt="" class="bannercat__img bannercat__img_5">
 						<span>Кожгалантерея</span>
 					</div>
-					<div class="bannercat__item">
+					<div class="bannercat__item bannercat__item_6">
 						<img src="img/icon_accessories.svg" alt="" class="bannercat__img bannercat__img_6">
 						<span>Аксессуары</span>
 					</div>
