--- a/chemodan__shop/account.html
+++ b/chemodan__shop/account.html
@@ -1374,7 +1374,7 @@
 							<li>
 								<div class="sidenav__text">
 									<div class="sidenav__imgcont sidenav__imgcont_6">
-										<img src="img/icon_accessories.svg" alt="">
+										<img src="img/icon_tag.svg" alt="">
 									</div>
 									<a>Аксессуары</a>
 								</div>
@@ -1739,7 +1739,7 @@
 										<div class="profile__img">
 											<img src="img/face2.png" alt="">
 										</div>
-										<a href="" class="profile__chpass">Изменить пароль</a>
+										<a class="profile__chpass">Изменить пароль</a>
 									</div>
 									<div class="profile__right">
 										<h3 class="account__title">Личная информация:</h3>
@@ -1788,7 +1788,7 @@
 							<!-- Address tab -->
 							<div class="address">
 								<h3 class="account__title">Добавьте адреса доставки:</h3>
-								<button class="btn">Добавить адрес</button>
+								<button class="btn address__addmore">Добавить адрес</button>
 								<div class="address__add">
 									<h3 class="account__title account__title_grey">Добавьте адреса доставки:</h3>
 									<form action="" class="profile__form">
@@ -1851,6 +1851,27 @@
 										<div class="address__edit"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></div>
 										<div class="address__remove"><i>+</i></div>
 									</div>
+									<div class="address__add address__editbox">
+										<h3 class="account__title account__title_grey">Редактировать даные:</h3>
+										<form action="" class="profile__form">
+											<div class="account__input account__input_3">
+												<label for="">Город:</label>
+												<input type="text" placeholder="Москва">
+											</div>
+											<div class="account__input account__input_4">
+												<label for="">Адрес:</label>
+												<input type="text" placeholder="ул. Космонавтов 15">
+											</div>
+											<div class="account__input account__input_3">
+												<label for="">Квартира/офис:</label>
+												<input type="text" placeholder="2">
+											</div>
+											<div class="profile__buttcont profile__buttcont_np address__buttcont">
+												<button class="btn btn_mini btn_address">Сохранить</button>
+												<button class="btn btn_mini btn_address">Отмена</button>
+											</div>
+										</form>
+									</div>
 								</div>
 								<div class="address__item">
 									<div class="address__name">
@@ -1860,6 +1881,27 @@
 									<div class="address__options">
 										<div class="address__edit"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></div>
 										<div class="address__remove"><i>+</i></div>
+									</div>
+									<div class="address__add address__editbox">
+										<h3 class="account__title account__title_grey">Редактировать даные:</h3>
+										<form action="" class="profile__form">
+											<div class="account__input account__input_3">
+												<label for="">Город:</label>
+												<input type="text" placeholder="Москва">
+											</div>
+											<div class="account__input account__input_4">
+												<label for="">Адрес:</label>
+												<input type="text" placeholder="ул. Космонавтов 15">
+											</div>
+											<div class="account__input account__input_3">
+												<label for="">Квартира/офис:</label>
+												<input type="text" placeholder="2">
+											</div>
+											<div class="profile__buttcont profile__buttcont_np address__buttcont">
+												<button class="btn btn_mini btn_address">Сохранить</button>
+												<button class="btn btn_mini btn_address">Отмена</button>
+											</div>
+										</form>
 									</div>
 								</div>
 							</div>
