--- a/chemodan__shop/balance.html
+++ b/chemodan__shop/balance.html
@@ -1374,7 +1374,7 @@
 							<li>
 								<div class="sidenav__text">
 									<div class="sidenav__imgcont sidenav__imgcont_6">
-										<img src="img/icon_accessories.svg" alt="">
+										<img src="img/icon_tag.svg" alt="">
 									</div>
 									<a>Аксессуары</a>
 								</div>
@@ -1768,6 +1768,11 @@
 								</div>
 								<p class="balance__name">Чемодан Alezar Prestige</p>
 								<p class="balance__price">3 990 руб.</p>
+								<div class="balance__icons">
+									<i class="balance__cart"></i>
+									<i class="balance__heart"></i>
+									<i class="balance__close">+</i>
+								</div>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_1">
 								<p>Alezar</p>
@@ -1881,6 +1886,11 @@
 								</div>
 								<p class="balance__name">Чемодан Monopol London</p>
 								<p class="balance__price">3 990 руб.</p>
+								<div class="balance__icons">
+									<i class="balance__cart"></i>
+									<i class="balance__heart"></i>
+									<i class="balance__close">+</i>
+								</div>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_1">
 								<p>Alezar</p>
@@ -1935,6 +1945,11 @@
 								</div>
 								<p class="balance__name">Чемодан Alezar Style</p>
 								<p class="balance__price">1 990 руб.</p>
+								<div class="balance__icons">
+									<i class="balance__cart"></i>
+									<i class="balance__heart"></i>
+									<i class="balance__close">+</i>
+								</div>
 							</div>
 							<div class="balance__row balance__row_odd2 balance__row_1">
 								<p>Alezar</p>
