--- a/chemodan__shop/basket.html
+++ b/chemodan__shop/basket.html
@@ -1374,7 +1374,7 @@
 							<li>
 								<div class="sidenav__text">
 									<div class="sidenav__imgcont sidenav__imgcont_6">
-										<img src="img/icon_accessories.svg" alt="">
+										<img src="img/icon_tag.svg" alt="">
 									</div>
 									<a>Аксессуары</a>
 								</div>
@@ -2008,7 +2008,8 @@
 							<div class="delpay__cont">
 								<div class="delpay__item">
 									<div class="delpay__img">
-										<img src="img/del1.png" alt="">
+										<img class="delpay__image" src="img/del1.png" alt="">
+										<img class="delpay__image_active" src="img/del1_active.png" alt="">
 									</div>
 									<div class="delpay__info">
 										<p class="delpay__name">Самовывоз</p>
@@ -2016,7 +2017,8 @@
 								</div>
 								<div class="delpay__item">
 									<div class="delpay__img">
-										<img src="img/del2.png" alt="">
+										<img class="delpay__image" src="img/del2.png" alt="">
+										<img class="delpay__image_active" src="img/del2_active.png" alt="">
 									</div>
 									<div class="delpay__info">
 										<p class="delpay__name">Курьером по <br> Москве и МО</p>
@@ -2025,7 +2027,8 @@
 								</div>
 								<div class="delpay__item">
 									<div class="delpay__img">
-										<img src="img/del3.png" alt="">
+										<img class="delpay__image" src="img/del3.png" alt="">
+										<img class="delpay__image_active" src="img/del3_active.png" alt="">
 									</div>
 									<div class="delpay__info">
 										<p class="delpay__name">Срочная доставка</p>
@@ -2034,7 +2037,8 @@
 								</div>
 								<div class="delpay__item">
 									<div class="delpay__img">
-										<img src="img/del5.png" alt="">
+										<img class="delpay__image" src="img/del5.png" alt="">
+										<img class="delpay__image_active" src="img/del5_active.png" alt="">
 									</div>
 									<div class="delpay__info">
 										<p class="delpay__name">Деловые линии <br> (в регионы)</p>
@@ -2043,7 +2047,8 @@
 								</div>
 								<div class="delpay__item">
 									<div class="delpay__img">
-										<img src="img/del6.png" alt="">
+										<img class="delpay__image" src="img/del6.png" alt="">
+										<img class="delpay__image_active" src="img/del6_active.png" alt="">
 									</div>
 									<div class="delpay__info">
 										<p class="delpay__name">Автотрейдинг</p>
@@ -2052,7 +2057,8 @@
 								</div>
 								<div class="delpay__item delpay__item_active">
 									<div class="delpay__img">
-										<img src="img/del7.png" alt="">
+										<img class="delpay__image" src="img/del7.png" alt="">
+										<img class="delpay__image_active" src="img/del7_active.png" alt="">
 									</div>
 									<div class="delpay__info">
 										<p class="delpay__name">Почта России</p>
@@ -2061,7 +2067,8 @@
 								</div>
 								<div class="delpay__item">
 									<div class="delpay__img">
-										<img src="img/del7.png" alt="">
+										<img class="delpay__image" src="img/del7.png" alt="">
+										<img class="delpay__image_active" src="img/del7_active.png" alt="">
 									</div>
 									<div class="delpay__info">
 										<p class="delpay__name">Байкал-Сервис <br> (в регионы)</p>
@@ -2073,7 +2080,8 @@
 							<div class="delpay__cont">
 								<div class="delpay__item">
 									<div class="delpay__img">
-										<img src="img/pay1.png" alt="">
+										<img class="delpay__image" src="img/pay1.png" alt="">
+										<img class="delpay__image_active" src="img/pay1_active.png" alt="">
 									</div>
 									<div class="delpay__info">
 										<p class="delpay__name">Наличный <br> рассчёт</p>
@@ -2081,7 +2089,8 @@
 								</div>
 								<div class="delpay__item">
 									<div class="delpay__img">
-										<img src="img/pay2.png" alt="">
+										<img class="delpay__image" src="img/pay2.png" alt="">
+										<img class="delpay__image_active" src="img/pay2_active.png" alt="">
 									</div>
 									<div class="delpay__info">
 										<p class="delpay__name">Безналичный <br> рассчёт</p>
@@ -2089,7 +2098,8 @@
 								</div>
 								<div class="delpay__item">
 									<div class="delpay__img">
-										<img src="img/pay3.png" alt="">
+										<img class="delpay__image" src="img/pay3.png" alt="">
+										<img class="delpay__image_active" src="img/pay3_active.png" alt="">
 									</div>
 									<div class="delpay__info">
 										<p class="delpay__name">Онлайн-оплата</p>
