--- a/chemodan__shop/basket_reg1.html
+++ b/chemodan__shop/basket_reg1.html
@@ -1374,7 +1374,7 @@
 							<li>
 								<div class="sidenav__text">
 									<div class="sidenav__imgcont sidenav__imgcont_6">
-										<img src="img/icon_accessories.svg" alt="">
+										<img src="img/icon_tag.svg" alt="">
 									</div>
 									<a>Аксессуары</a>
 								</div>
@@ -2116,8 +2116,8 @@
 											<label for="">Введите e-mail:</label>
 											<input type="text" placeholder="E-mail*">
 										</div>
-										<a href="" class="perinfo__a">Вход</a>
-										<a href="" class="perinfo__a">Регистрация</a>
+										<a href="" class="perinfo__a modalrun2">Вход</a>
+										<a href="" class="perinfo__a modalrun1">Регистрация</a>
 									</div>
 									<button class="btn btn_center modalrun5">Восстановить</button>
 								</div>
