--- a/chemodan__shop/basket_reg2.html
+++ b/chemodan__shop/basket_reg2.html
@@ -1374,7 +1374,7 @@
 							<li>
 								<div class="sidenav__text">
 									<div class="sidenav__imgcont sidenav__imgcont_6">
-										<img src="img/icon_accessories.svg" alt="">
+										<img src="img/icon_tag.svg" alt="">
 									</div>
 									<a>Аксессуары</a>
 								</div>
@@ -2132,7 +2132,7 @@
 											<label for="">Пароль:</label>
 											<input type="text" placeholder="Пароль*">
 										</div>
-										<a href="" class="perinfo__a">У вас уже есть аккаунт? Войдите</a>
+										<a href="" class="perinfo__a modalrun2">У вас уже есть аккаунт? Войдите</a>
 									</div>
 									<button class="btn btn_center modalrun5">Зарегистрироваться</button>
 								</div>
