--- a/chemodan__shop/index.html
+++ b/chemodan__shop/index.html
@@ -547,7 +547,7 @@
 							<li>
 								<div class="sidenav__text">
 									<div class="sidenav__imgcont sidenav__imgcont_6">
-										<img src="img/icon_accessories.svg" alt="">
+										<img src="img/icon_tag.svg" alt="">
 									</div>
 									<a>Аксессуары</a>
 								</div>
@@ -756,7 +756,7 @@
 				</div>
 				<!-- Banner categories -->
 				<div class="bannercat">
-					<div class="bannercat__item bannercat__item_1">
+					<div class="bannercat__item bannercat__item_1 bannercat__item_active">
 						<img src="img/icon_suitcase.svg" alt="" class="bannercat__img bannercat__img_1">
 						<span>Чемоданы</span>
 					</div>
@@ -927,6 +927,9 @@
 					<div class="product">
 						<div class="product__img">
 							<img src="img/product1.png" alt="">
+						</div>
+						<div class="product__timer">
+							<span>20:30:46</span>
 						</div>
 						<div class="product__center">
 							<div class="product__left">
@@ -1680,6 +1683,7 @@
 	<script type="text/javascript" src="js/components/jquery.formstyler.js" ></script>
 	<script type="text/javascript" src="js/components/jquery.mCustomScrollbar.js" ></script>
 	-->
+	<script type="text/javascript" src="js/components/jquery.countdown.min.js" ></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
 	<script type="text/javascript" src="js/custom.js" ></script>
 </body>
