--- a/chemodan__shop/basket_reg3.html
+++ b/chemodan__shop/basket_reg3.html
@@ -1374,7 +1374,7 @@
 							<li>
 								<div class="sidenav__text">
 									<div class="sidenav__imgcont sidenav__imgcont_6">
-										<img src="img/icon_accessories.svg" alt="">
+										<img src="img/icon_tag.svg" alt="">
 									</div>
 									<a>Аксессуары</a>
 								</div>
@@ -2028,7 +2028,7 @@
 											<input type="text" placeholder="Пароль*">
 										</div>
 										<a href="" class="perinfo__a">Забыли пароль?</a>
-										<a href="" class="perinfo__a">Регистрация</a>
+										<a href="" class="perinfo__a modalrun1">Регистрация</a>
 									</div>
 									<button class="btn btn_center modalrun5">Зарегистрироваться</button>
 								</div>
