--- a/chemodan__shop/feedback.html
+++ b/chemodan__shop/feedback.html
@@ -1374,7 +1374,7 @@
 							<li>
 								<div class="sidenav__text">
 									<div class="sidenav__imgcont sidenav__imgcont_6">
-										<img src="img/icon_accessories.svg" alt="">
+										<img src="img/icon_tag.svg" alt="">
 									</div>
 									<a>Аксессуары</a>
 								</div>
